added auth to all